mods/videocall/web/css/videocall-video-interface.css
/* ... */
.stun-chatbox .minimizer i {
	font-size: 4rem;
	color: var(--saito-white);
	transition: all 0.2s;
	text-shadow: 0 0 3px var(--saito-black);
	line-height: 3rem;
}

@keyframes minimize {
	100% {
		position: absolute;
		opacity: 0.8;
		transform: translate(-40%, 90%) translate(0, -50%) scale(0.2);
	}
}

.stun-chatbox.minimize {
	width: 30rem;
	height: 30rem;
	min-width: 27rem;
	min-height: 28rem;
	overflow: auto;
	resize: both;
	/* animation-name: minimize;
  animation-duration: 1s;
  animation-fill-mode: forwards; */
	cursor: grab;
	border-radius: 0.5rem;
}

.stun-chatbox.minimize main {
	/* Fixed grid layout */
	grid-template-rows: calc(100% - 40px) 40px;
	grid-template-columns: minmax(5rem, 1fr);
}

.stun-chatbox.minimize .footer {
	padding: unset;
}

.stun-chatbox.minimize .minimizer i {
	font-size: 2rem;
}

.stun-chatbox.minimize .video-container-large {
	padding: 0.25rem;
	grid-template-columns: 1fr;
}

.stun-chatbox.minimize .expanded-video {
	width: 100%;
	min-width: unset;
	resize: unset;
}

.stun-chatbox.minimize .side-videos {
	display: none;
}

.stun-chatbox.minimize .control-panel {
	padding: 0.25rem;
	gap: 0.5rem;
}

.stun-chatbox.minimize .timer {
	min-width: unset;
	gap: 0;
	/*max-width: 50%;*/
	flex: 1;
}

.stun-chatbox.minimize .stun-identicon-list img.saito-identicon {
	width: 3rem;
	height: 3rem;
}

.stun-chatbox.minimize .users-on-call-text, .stun-chatbox.minimize .add-users-container, .stun-chatbox.minimize .imported-actions, .stun-chatbox.minimize label {
	display: none;
}

.stun-chatbox.minimize .control-list {
	width: 100%;
	justify-content: flex-end;
	gap: 1px;
}

.stun-chatbox.minimize .call-controls .icon_click_area {
	display: flex;
	width: 3.5rem;
	height: 3.5rem;
}

.stun-chatbox.minimize .icon_click_area i {
	font-size: unset;
}

.stun-chatbox .minimizer:hover i, .stun-chatbox .maximizer:hover i {
	color: var(--saito-primary);
	transform: scale(1.1);
}

.stun-chatbox main {
	height: 100%;
	width: 100%;
	display: grid;
	grid-template-rows: calc(100% - 150px) 150px;
}

.stun-chatbox .heading {
	padding: 1rem;
}

.stun-chatbox .video-container-large {
	display: grid;
	width: 100%;
	height: 100%;
	max-height: 85vh;
	transition: all 0.5s ease;
	position: relative;
	padding: 1rem;
	gap: 1rem;
	flex-wrap: wrap;
}

.gallery {
	grid-template-columns: repeat(auto-fit, minmax(48%, 1fr));
	grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
	height: fit-content;
	width: 100%;
	max-height: 100%;
}

.split-view {
	grid-template-columns: min-content 1fr;
}

/*  video box */

.presentation, .expanded-video {
	resize: horizontal;
	overflow: auto;
	max-height: calc(100vh - 13rem);
	min-width: 50vw;
	max-width: 85vw;
	width: 75vw;
}

.stun-chatbox .side-videos {
	display: grid;
	grid-template-rows: repeat(3, minmax(20vh, auto));
	gap: 1rem;
	max-height: calc(100vh - 13rem);
	overflow: auto;
}

.stun-chatbox .peer-call-list {
	display: flex;
	padding: 0.5rem;
	gap: 0.5rem;
}

.peer-call-list .saito-identicon {
	width: 2.5rem;
	height: 2.5rem;
}

.peer-list-item.not-connected {
	filter: grayscale(100%);
}

.expanded-video .video-box-container-large {
	width: 100%;
	height: 100%;
	opacity: 0;
	opacity: 0;
	animation: fade-in 0.5s ease-in;
	animation-fill-mode: forwards;
}

.side-videos .video-box-container-large {
	max-height: 100%;
	overflow: clip;
}

.stun-chatbox .video-box-container-large {
	border: 2px solid var(--saito-border-color-dark);
	border-radius: 0.5rem;
	cursor: pointer;
}

.presentation {
	width: 85%;
	height: 100%;
	margin-right: 10px;
}

.presentation .video-box-container-large {
	width: 100%;
	opacity: 0;
	opacity: 0;
	animation: fade-in 0.5s ease-in;
	animation-fill-mode: forwards;
	border: 2px solid var(--saito-border-color-dark);
}

.presentation-side-videos {
	flex: 1;
}

.presentation-side-videos .video-box-container-large {
	height: fit-content;
	border: 2px solid var(--saito-border-color-dark);
}

.stun-chatbox .video-box-container-large {
	border-radius: 0.5rem;
	position: relative;
}

@keyframes fade-in {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

.stun-chatbox .b-btngrid {
	border: none;
	margin-left: 1rem;
	margin-top: 250px;
	width: 160px;
	height: 38px;
	border-radius: 4px;
	left: 51px;
	cursor: pointer;
}

.stun-chatbox .heading {
	background: linear-gradient(96.79deg, #f30c4f 0%, #f8c062 91.87%);
}

/* video chat */

.lds-dual-ring {
	display: inline-block;
}

.lds-dual-ring:after {
	content: ' ';
	display: block;
	width: 10px;
	height: 10px;
	margin: 8px;
	border-radius: 50%;
	border: 6px solid var(--saito-white);
	border-color: var(--saito-white) transparent var(--saito-white) transparent;
	animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

@keyframes glow {
	0% {
		transform: scale(0.97);
	}
	50% {
		transform: scale(1);
	}
	75% {
		transform: scale(0.97);
	}
	100% {
		transform: scale(0.97);
	}
}

.video-box-container-large {
	display: flex;
	height: 100%;
	width: 100%;
	justify-content: center;
	align-items: center;
	color: var(--saito-white);
	position: relative;
}

/* When staring at self, be like a mirror */

.chat-settings-preview video, video#local {
	transform: rotateY(180deg);
}

.video-box-container-large video {
	width: 100%;
	height: 100%;
	max-width: 100%;
	max-height: 100%;
	z-index: 2;
	border-radius: 0.1rem;
	object-fit: cover;
	border: none;
	overflow: clip;
}

.video-box-container-large.portrait video {
	width: auto;
	height: 100%;
}

.video-box-container-large>#connection-message {
	color: var(--saito-white);
	width: 50%;
	line-height: 1.5;
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	z-index: 10;
}

#reconnect-button {
	color: var(--saito-white);
	/* width: 50%; */
	line-height: 1.5;
	position: absolute;
	/* display: flex; */
	align-items: center;
	justify-content: center;
	z-index: 10;
	position: absolute;
	bottom: 0;
	right: 0;
	opacity: 0;
}
/* ... */

